for-docker-advanced/myfront_advanced_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: myfront_advanced
  namespace: zhiyi
spec:
  replicas: 1
  selector:
    matchLabels:
      app: myfront_advanced
  template:
    metadata:
      labels:
        app: myfront_advanced
    spec:
      containers:
      - name: myfront_advanced
        image: myfront_advanced
        ports:
        - containerPort: 80
        livenessProbe:
          httpGet:
            path: /healthz
            port: 80
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: 80
          initialDelaySeconds: 5
          periodSeconds: 10
