for-docker-advanced/other-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: other-backend
  namespace: zhiyi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: other-backend
  template:
    metadata:
      labels:
        app: other-backend
        istio: enabled
    spec:
      containers:
      - name: other-backend
        image: #TODO后端-其他镜像
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
