for-docker-advanced/user-management-backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-management-backend
  namespace: zhiyi
spec:
  replicas: 2
  selector:
    matchLabels:
      app: user-management-backend
  template:
    metadata:
      labels:
        app: user-management-backend
    spec:
      containers:
      - name: user-management-backend
        image: #TODO后端-用户管理镜像
        ports:
        - containerPort: 8080
        livenessProbe:
          httpGet:
            path: /healthz
            port: 8080
          initialDelaySeconds: 30
          periodSeconds: 10
        readinessProbe:
          httpGet:
            path: /ready
            port: 8080
          initialDelaySeconds: 5
          periodSeconds: 10
