for-docker-advanced/front-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: questionnaire-front
spec:
  replicas: 1
  selector:
    matchLabels:
      app: questionnaire-front
  template:
    metadata:
      labels:
        app: questionnaire-front
    spec:
      containers:
      - name: questionnaire-front
        image: tiezhugiegie/questionnaire-app:latest  # 使用本地镜像名称
        ports:
        - containerPort: 80
        imagePullPolicy: Never  # 不从远程拉取镜像，直接使用本地镜像
        # livenessProbe:
        #   httpGet:
        #     path: /healthz
        #     port: 80
        #   initialDelaySeconds: 30
        #   periodSeconds: 10
        # readinessProbe:
        #   httpGet:
        #     path: /ready
        #     port: 80
        #   initialDelaySeconds: 5
        #   periodSeconds: 10
---
apiVersion: v1
kind: Service
metadata:
  name: questionnaire-front-service
spec:
  selector:
    app: questionnaire
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
      nodePort: 31235  # 您可以指定一个介于30000-32767之间的端口号
  type: NodePort
