for-docker-advanced/my-management-back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-management-back-service
  namespace: zhiyi
spec:
  type: ClusterIP
  selector:
    app: my-management-back
  ports:
  - name: http
    port: 8080
    targetPort: 8080
