for-docker-advanced/my-user-back-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-user-back-service
  namespace: zhiyi
spec:
  type: NodePort
  selector:
    app: my-user-back
  ports:
  - name: http
    port: 7000
    targetPort: 8000
