for-docker-advanced/myfront_advanced_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: myfront_advanced_service
  namespace: zhiyi
spec:
  type: NodePort
  selector:
    app: myfront_advanced
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30001
