for-docker-advanced/questionnaire-app-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: questionnaire-app-service
  namespace: zhiyi
spec:
  type: NodePort
  selector:
    app: questionnaire-app
  ports:
  - name: http
    port: 80
    targetPort: 80
    nodePort: 30001
