for-docker-advanced/user-management-backend-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-management-backend-service
  namespace: survey-app
spec:
  type: ClusterIP
  selector:
    app: user-management-backend
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
